--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body {
 	height: 100vh;
 	background-color: var(--bg-color);
 	font-family: roboto, sans-serif;
+	overflow-x: hidden;
 }
 
 .Container {
